<resources>
    <string name="app_name">individualproject</string>
    <string name="pdg">PDG создан экспертами в области ментального здоровья</string>
    <string name="n">Начать!</string>
    <string name="already">Уже есть аккаунт?</string>
    <string name="login">Войти</string>
    <string name="kvz">Как Вас зовут?</string>
    <string name="p">Представьтесь..</string>
    <string name="w">Что бы Вы хотели улучшить в своей жизни?</string>
    <string name="gradient">gradient</string>
    <string name="whitegradient">whitegradient</string>
    <string name="focus">Мой фокус</string>
    <string name="stress">Мой стресс</string>
    <string name="workout">Мои тренировки</string>
    <string name="dream">Мой сон</string>
    <string name="dontknow">Я еще не знаю</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="enter">Пожалуйста, войдите в систему, чтобы продолжить</string>
    <string name="by_register_you_agree_to_our_terms_data_policy_and_cookies_policy">By register, you agree to our Terms, Data Policy and Cookies Policy.</string>
    <string name="pdgwelcome">Добро пожаловать в PDG!</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="youracc">Ваш аккаунт подготовлен</string>
    <string name="shifrovanie">Шифрование и обеспечение безопастности твоих данных</string>
    <string name="nastroika">Настройка твоего пространства</string>
    <string name="spv">Создание персонализированных вопросов</string>
    <string name="ptgn">Подготовка твоего графика настроения</string>
    <string name="ats">Анализ твоего сна</string>
    <string name="start">Начать!</string>
    <string name="notification">Установите ежедневное напоминание об отметке настроения</string>
    <string name="otmechaya">Отмечая свое настроение каждый день, вы сможете чувствовать себя лучше</string>
    <string name="_3">3х</string>
    <string name="arrowback">arrowback</string>
    <string name="poloska">poloska</string>
    <string name="_9_00">Я просыпаюсь в 9:00</string>
    <string name="_00_00">Я засыпаю в 00:00</string>
    <string name="noti">Поставить напоминание</string>
    <string name="good_afternoon">Добрый день,</string>
    <string name="sabina">Сабина</string>
    <string name="avatar">avatar</string>
    <string name="rectangle">rectangle</string>
    <string name="vopros">Вопрос дня</string>
    <string name="ifyou">Если бы у вас оставались последние деньги, как бы вы их использовали?</string>
    <string name="answer">Ответить</string>
    <string name="didnt_like">Не нравится вопрос? Выберите другой</string>
    <string name="_532">532 пользователя вели сегодня свой дневник</string>
    <string name="backgroundpurple">backgroundpurple</string>
    <string name="how_do_u_fell_yourself">Как вы себя чувствуете?</string>
    <string name="emoji">emoji</string>
    <string name="smth">smth</string>
    <string name="awful">Ужасно</string>
    <string name="wonderful">Замечательно</string>
    <string name="add">Добавить</string>
    <string name="th">Четверг</string>
    <string name="dec">Декабрь 02</string>
    <string name="year">year</string>
    <string name="diary1">Дневник</string>
    <string name="where">Где вы чувствуете себя лучше всего?</string>
    <string name="somewhere">где-нибудь не дома</string>
    <string name="redakc">redakc</string>
    <string name="share">share</string>
    <string name="addnastr">Добавить настроение</string>
    <string name="my">Мои отметки настроения</string>
    <string name="how">Как вы себя чувствуете?</string>
    <string name="main">main</string>
    <string name="diary">diary</string>
    <string name="menu">menu</string>
    <string name="ellipse">ellipse</string>
    <string name="_1">1 день</string>
    <string name="nextquestion">Следующий вопрос будет доступен через 14ч 33т 3с</string>
    <string name="_34">Вы и еще 34 пользователя вели дневник сегодня</string>
    <string name="mood">Трекер моего настроения</string>
</resources>